vault/_ProjectArchive/Audits_and_Logs/sample_bodies.txt
  File "<string>", line 10
    print(f'=== {art[\
                    ^
SyntaxError: '[' was never closed
